--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -28,11 +28,11 @@ android {
         dataBinding true
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8.toString()
+        jvmTarget = '17'
     }
 }
 
@@ -58,7 +58,7 @@ dependencies {
     implementation "androidx.core:core-ktx:$version_core"
 
     // Retrofit
-    implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
+    implementation "com.squareup.retrofit2:retrofit: $version_retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$version_retrofit_coroutines_adapter"
 
@@ -69,14 +69,16 @@ dependencies {
 
     // Glide
     // TODO: Add Glide Implementation
+    implementation "com.github.bumptech.glide:glide:$version_glide"
 
     // Room
     implementation "androidx.room:room-runtime:$version_room"
+    implementation "androidx.room:room-ktx:$version_room"
     kapt "androidx.room:room-compiler:$version_room"
 
     // Location
     implementation "com.google.android.gms:play-services-location:$version_play_services_location"
 
-    // Timber
-    implementation "com.jakewharton.timber:timber:$version_timber"
+    // Koin
+    implementation "io.insert-koin:koin-android:$version_koin"
 }
